2002-03-13  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-main.c
	(libbonoboui_module_info_get): impl.
	(do_low_level_init): split out of
	(bonobo_ui_init_full): here.
	(libbonoboui_post_args_parse): impl.

	* bonobo/bonobo-ui-init-gtk.c: move from libgnomeui

2002-03-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full): 
	use DisplayString not gdk_get_display.

	* samples/controls/bonobo-sample-controls.c (main):
	ditto.

2002-03-11  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added 'ko' to ALL_LINGUAS.

2002-03-08  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full):
	initialize the display context setting so it
	correctly matches the normalized name returned
	from gdk_display_name.

2002-03-06  Michael Meeks  <michael@ximian.com>

	* samples/controls/bonobo-sample-controls.c
	(main): do per display init.

2002-03-05  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-config-widget.c
	(row_activated_cb): rename to
	(list_selection_changed): this.
	(set_values): move up & expand.
	(list_selection_changed): use set_values.

2002-03-05  Christian Meyer  <chrisime@gnome.org>

	* configure.in: Added 'de' to ALL_LINGUAS.

2002-03-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): fix leak.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_get_icon_widget),
	(bonobo_ui_util_xml_get_pixbuf),
	(lookup_stock_compat): lookup pixmaps not
	stock items.

2002-03-04  Michael Meeks  <michael@ximian.com>

	* Version 1.112.1

2002-03-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui-auto.c (test_ui_performance):
	use top_srcdir.

	* bonobo/bonobo-ui-sync-status.c
	(impl_bonobo_ui_sync_status_state): get
	'resize_grip' from the parent 'status' node, and
	don't show the grip if we have controls / items
	shown to the right.

2002-03-02  James Willcox  <jwilcox@cs.indiana.edu>

	* bonobo/bonobo-file-selector-util.c
	(run_file_selector): fix for FILESEL_OPEN_MULTI
