@@ -45,8 +45,9 @@ main (int argc, char **argv)
 
 	textdomain (GETTEXT_PACKAGE);
 
-	if (!bonobo_ui_init ("test-focus", VERSION, &argc, argv))
-		g_error (_("Can not bonobo_ui_init"));
+	gnome_program_init ("test-focus", VERSION,
+			    LIBBONOBOUI_MODULE,
+			    argc, argv, NULL);
 
 	orb = bonobo_orb ();
 
